# perception

./: .flake8  .gitignore  .travis.yml  CMakeLists.txt  README.md  README.txt  genindex.html  index.html  objects.inv  package.xml  search.html  searchindex.js  setup.py
.github/workflows/: release.yml  (+1 more)
_sources/: index.rst.txt  index.txt
api/: camera_intrinsics.html  cnn.html  detector.html  features.html  image.html  kinect_sensor.html  registration.html  video.html
docs/: Makefile  gh_deploy.sh
install/: install.html
launch/: ensenso.launch  ensenso_registration.launch  primesense.launch  weight_sensor.launch
perception/: __init__.py  basic_imaging.py  bg_segmentation.py  bincam_2D.py  camera_chesssboard_register.py  camera_intrinsics.py  camera_sensor.py  chessboard_registration.py  cnn.py  colorized_phoxi_sensor.py  constants.py  depth_cnn_query_image.py  detector.py  ensenso_sensor.py  exceptions.py  feature_extractors.py  feature_matcher.py  features.py  image.py  kinect2_ros_sensor.py  kinect2_sensor.py  kinect2_sensor_bridge.py  object_render.py  opencv_camera_sensor.py  orthographic_intrinsics.py  phoxi_ros_sensor.py  phoxi_sensor.py  point_registration.py  primesense_ros_sensor.py  primesense_sensor.py  realsense_sensor.py  registration.py  rgbd_sensor.py  rgbd_sensors.py  ros_image_buffer.py  ros_sensor.py  video_recorder.py  video_writer.py  virtual_camera_sensor.py  webcam_sensor.py  (+1 more)
ros_nodes/: image_buffer.py  weight_publisher.py
srv/: GetFrame.srv  ImageBuffer.srv
test/: constants.py  constants.py~  image_test.py  image_test.py~  registration_test.py  registration_test.py~
tests/: .test_image.py.swp  constants.py  kinect2_sensor_bridge.py  test_image.py  test_registration.py  test_rgbd_sensors.py
tools/: analyze_cnn_classification.py  calibrate_webcam.py  capture_dataset.py  capture_images.py  capture_single_obj_dataset.py  capture_single_obj_dataset_stable_poses.py  capture_test_images.py  colorize_phoxi.py  compute_normal_cloud_im.py  filter_images.py  finetune_classification_cnn.py  generate_instance_recog_dataset.py  generate_siamese_dataset.py  keras_resnet.py  keras_vgg.py  kinect2_sensor_bridge.py  predict_class_label.py  primesense_viewer.py  process_wisdom_dataset.py  register_camera.py  register_ensenso.py  register_object.py  register_webcam.py  test_ensenso.py  test_realsense.py  test_video_recorder.py  test_weight_sensor.py  train_instance_recognizer.py
(+39 files in other folders)
