<?xml version="1.0"?>
<package>
  <name>perception</name>
  <version>1.1.0</version>
  <description>Autolab Drivers package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="mdanielczuk@berkeley.edu">Mike Danielczuk</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache v2.0</license>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>python-numpy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>python-numpy</run_depend>

</package>
